fix: popUp covers the whole screen

--- a/client/src/components/popUp/popUp.module.scss
+++ b/client/src/components/popUp/popUp.module.scss
@@ -1,12 +1,13 @@
 .popUp {
     display: flex;
-    position: absolute;
+    position: fixed;
     height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.486);
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    top: 0;
     z-index: 1;
 }
 
